# pytrieng

./: .gitignore  README.md  pyproject.toml
tests/: test_core.py
trieng/: __init__.py
