[tool.poetry]
name = "trieng"
version = "0.1.0"
description = ""
authors = ["Dylan Wilson <dylanjw@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toolz = "^0.10.0"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
